--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
     <div class="flex justify-center gap-[10px]">
 
       <div style="flex-basis: 60%;" class="sm:basis-2/5 flex justify-center">
-        <img loading="lazy" src="/aboutus/Our Team.png" alt="Our Team" class=" animate-left w-[100%] h-[100%] object-contain scale-100">
+        <img loading="lazy" src="/aboutus/Our Team.png" alt="Our Team" class=" animate-left w-[100%] h-[140%] object-cover scale-100">
       </div>
 
 
